# parallel.rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  upload-docs.sh
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: execute.rs
src/: apply.rs  divide.rs  lib.rs
