[package]
name = "parallel"
version = "0.0.0"
authors = ["Jorge Aparicio <japaricious@gmail.com>"]

[dependencies.parallel_macros]
path = "macros"

[dev-dependencies.quickcheck]
git = "https://github.com/japaric/quickcheck"

[dev-dependencies.quickcheck_macros]
git = "https://github.com/japaric/quickcheck"
