[package]
name = "parallel"
version = "0.0.0"
authors = ["Jorge Aparicio <japaricious@gmail.com>"]

[features]
macros = ["parallel_macros"]

[dependencies.parallel_macros]
optional = true
path = "macros"

[dev-dependencies]
rand = "*"

[dev-dependencies.quickcheck]
git = "https://github.com/burntsushi/quickcheck"

[dev-dependencies.quickcheck_macros]
git = "https://github.com/burntsushi/quickcheck"
